Fix iOS auto-zoom on input focus by setting font-size to 16px on mobile

--- a/src/pages/EditorPage/EditorPromptBar/EditorPromptBar.module.scss
+++ b/src/pages/EditorPage/EditorPromptBar/EditorPromptBar.module.scss
@@ -254,6 +254,10 @@
   .paletteBtn {
     display: flex;
   }
+
+  .input {
+    font-size: 16px;
+  }
 }
 
 .sendBtn {
